--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "appcenter-analytics": "4.1.0",
     "appcenter-crashes": "4.1.0",
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-exception-handler": "^2.10.10"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
