--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "appcenter-crashes": "4.1.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-device-info": "^8.1.3",
     "react-native-exception-handler": "^2.10.10"
   },
   "devDependencies": {
