--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-device-info": "^8.1.3",
+    "react-native-dotenv": "^2.5.5",
     "react-native-exception-handler": "^2.10.10"
   },
   "devDependencies": {
