--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.14.0",
     "@babel/runtime": "^7.14.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.26.0",
     "jest": "^26.6.3",
