--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "appcenter-crashes": "4.1.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-config": "^1.4.2",
     "react-native-device-info": "^8.1.3",
     "react-native-dotenv": "^2.5.5",
     "react-native-exception-handler": "^2.10.10"
@@ -25,7 +26,6 @@
     "@babel/core": "^7.14.0",
     "@babel/runtime": "^7.14.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native-dotenv": "^0.2.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.26.0",
     "jest": "^26.6.3",
